# dagster-databricks-workshop

./: .env.example  .gitignore  Dockerfile  README.md  buildspec.yaml  dagster_cloud.yaml  location.yaml  pyproject.toml
.github/workflows/: build-image.yml
setup/: 01_customers_raw.sql  02_clickstream_raw.sql  03_feature_engineering_notebook.py  README.md
src/databricks_demo/: definitions.py
src/databricks_demo/components/: databricks_workspace_component.py  scheduled_job_component.py
src/databricks_demo/defs/: clickstream_ml_pipeline.py  data_validation_pipeline.py  databricks_connect.py  databricks_pipes.py
src/databricks_demo/defs/databricks_schedules/: defs.yaml
src/databricks_demo/defs/databricks_workspace/: defs.yaml
